Creating most of the logic.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="dest/js/main.js"></script>
+    <script src="dest/js/config.js"></script>
+    <script src="dest/js/index.js"></script>
     <link rel="stylesheet" href="dest/css/main.css">
 </head>
 <body>
-
+    <section class="search">
+        <input class="input" name="search-bar" type="text" />
+        <button id="button">Search</button>
+    </section>
+    <section class="output"></section>
 </body>
 </html>
