Changing class attribute to ID so it's faster.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section class="search">
-        <input class="input" name="search-bar" type="text" />
+        <input id="input" name="search-bar" type="text" />
         <button id="button">Search</button>
     </section>
     <section class="output"></section>
