Adding ALT attribute.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <input id="input" name="search-bar" type="text" />
         <button id="button">Search</button>
     </section>
-    <section class="output"></section>
+    <section class="output">
+    </section>
     <script src="dest/js/index.js"></script>
 </body>
 </html>
