Adding a CLEAR button.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <section class="search">
         <input id="input" name="search-bar" type="text" />
-        <button id="button">Search</button>
+        <button id="search">Search</button>
+        <button id="clear">Clear</button>
     </section>
     <section class="output">
     </section>
